--- a/detalhes.html
+++ b/detalhes.html
@@ -15,8 +15,29 @@
     </header>
     <main>
         <section id="product-details" class="container">
-            <div class="card">
-                lalala
+            <div class="card mb20">
+                <div class="card-top">
+                    <img src="images/image 3.png" alt="Computador">
+                </div>
+                <div class="card-bottom">
+                    <h3>R$ 5000,00</h3>
+                    <h4>Computador Gamer XT</h4>
+                   <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quaerat provident iusto id, ad excepturi itaque eveniet ratione illum nam! Harum vero tempore dolorum minima libero tempora, in cupiditate earum!
+                   </p>
+                   <div class="category-container">
+                        <div class="category">Eletrônicos</div>
+                        <div class="category">Computadores</div>
+                   </div>
+                </div>
+            </div>
+            <div class="btn-page-container">
+                <div class="btn btn-blue">
+                   Comprar 
+                </div>
+                <div class="btn btn-white">
+                    Início
+                </div>
             </div>
         </section>
     </main>
