--- a/carrinho.html
+++ b/carrinho.html
@@ -4,56 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSCommerce</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/cart.css">
 </head>
 <body>
     <header>
-        <nav class="container">
+        <nav class="dsc-container">
             <h1>DSCommerce</h1>
             <a href="#">Entrar</a>
         </nav>
     </header>
     <main>
-        <section id="cart-container" class="container">
-            <div class="card mb20">
-                <div class="cart-item-container line-bottom">
-                    <div class="cart-item-left">
+        <section id="cart-container-section" class="dsc-container">
+            <div class="dsc-card dsc-mb20">
+                <div class="dsc-cart-item-container dsc-line-bottom">
+                    <div class="dsc-cart-item-left">
                         <img src="images/image 3.png" alt="Computador">
-                        <div class="card-item-description">
+                        <div class="dsc-card-item-description">
                             <h3>Computador Gamer XT</h3>
-                            <div class="cart-item-quantity-container">
-                                <div class="card-item-quantity-btn">-</div>
+                            <div class="dsc-cart-item-quantity-container">
+                                <div class="dsc-card-item-quantity-btn">-</div>
                                 <p>1</p>
-                                <div class="card-item-quantity-btn">+</div>
+                                <div class="dsc-card-item-quantity-btn">+</div>
                             </div>
                         </div>
                     </div>
-                    <div class="cart-item-right">R$ 5000,00</div>
+                    <div class="dsc-cart-item-right">R$ 5000,00</div>
                 </div>
-                <div class="cart-item-container line-bottom">
-                    <div class="cart-item-left">
+                <div class="dsc-cart-item-container dsc-line-bottom">
+                    <div class="dsc-cart-item-left">
                         <img src="images/image 3.png" alt="Computador">
-                        <div class="card-item-description">
+                        <div class="dsc-card-item-description">
                             <h3>Computador Gamer XT</h3>
-                            <div class="cart-item-quantity-container">
-                                <div class="card-item-quantity-btn">-</div>
+                            <div class="dsc-cart-item-quantity-container">
+                                <div class="dsc-card-item-quantity-btn">-</div>
                                 <p>1</p>
-                                <div class="card-item-quantity-btn">+</div>
+                                <div class="dsc-card-item-quantity-btn">+</div>
                             </div>
                         </div>
                     </div>
-                    <div class="cart-item-right">R$ 5000,00</div>
+                    <div class="dsc-cart-item-right">R$ 5000,00</div>
                 </div>
-                <div class="cart-total-container">
+                <div class="dsc-cart-total-container">
                     <h3>R$ 15000,00</h3>
                 </div>
             </div>
-            <div class="btn-page-container">
-                <div class="btn btn-blue">
+            <div class="dsc-btn-page-container">
+                <div class="dsc-btn dsc-btn-blue">
                    Finalizar pedido
                 </div>
-                <div class="btn btn-white">
+                <div class="dsc-btn dsc-btn-white">
                     Continuar comprando
                 </div>
             </div>
