--- a/detalhes.html
+++ b/detalhes.html
@@ -4,39 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSCommerce</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/details.css">
 </head>
 <body>
     <header>
-        <nav class="container">
+        <nav class="dsc-container">
             <h1>DSCommerce</h1>
             <a href="#">Entrar</a>
         </nav>
     </header>
     <main>
-        <section id="product-details" class="container">
-            <div class="card mb20">
-                <div class="product-details-top line-bottom">
+        <section id="product-details-section" class="dsc-container">
+            <div class="dsc-card dsc-mb20">
+                <div class="dsc-product-details-top dsc-line-bottom">
                     <img src="images/image 3.png" alt="Computador">
                 </div>
-                <div class="product-details-bottom">
+                <div class="dsc-product-details-bottom">
                     <h3>R$ 5000,00</h3>
                     <h4>Computador Gamer XT</h4>
                    <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quaerat provident iusto id, ad excepturi itaque eveniet ratione illum nam! Harum vero tempore dolorum minima libero tempora, in cupiditate earum!
                    </p>
-                   <div class="category-container">
-                        <div class="category">Eletrônicos</div>
-                        <div class="category">Computadores</div>
+                   <div class="dsc-category-container">
+                        <div class="dsc-category">Eletrônicos</div>
+                        <div class="dsc-category">Computadores</div>
                    </div>
                 </div>
             </div>
-            <div class="btn-page-container">
-                <div class="btn btn-blue">
+            <div class="dsc-btn-page-container">
+                <div class="dsc-btn dsc-btn-blue">
                    Comprar 
                 </div>
-                <div class="btn btn-white">
+                <div class="dsc-btn dsc-btn-white">
                     Início
                 </div>
             </div>
