--- a/carrinho.html
+++ b/carrinho.html
@@ -18,7 +18,7 @@
             <div class="dsc-card dsc-mb20">
                 <div class="dsc-cart-item-container dsc-line-bottom">
                     <div class="dsc-cart-item-left">
-                        <img src="images/image 3.png" alt="Computador">
+                        <img src="images/computer.png" alt="Computador">
                         <div class="dsc-card-item-description">
                             <h3>Computador Gamer XT</h3>
                             <div class="dsc-cart-item-quantity-container">
@@ -32,7 +32,7 @@
                 </div>
                 <div class="dsc-cart-item-container dsc-line-bottom">
                     <div class="dsc-cart-item-left">
-                        <img src="images/image 3.png" alt="Computador">
+                        <img src="images/computer.png" alt="Computador">
                         <div class="dsc-card-item-description">
                             <h3>Computador Gamer XT</h3>
                             <div class="dsc-cart-item-quantity-container">
