--- a/catalogo.html
+++ b/catalogo.html
@@ -23,7 +23,7 @@
             <div class="dsc-catalog-cards dsc-mb20 dsc-mt20">
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="dsc-card">
                     <div class="dsc-catalog-card-top dsc-line-bottom">
-                        <img src="images/image 3.png" alt="">
+                        <img src="images/computer.png" alt="">
                     </div>
                     <div class="dsc-catalog-card-bottom">
                         <h3>R$ 5000,00</h3>
