--- a/detalhes.html
+++ b/detalhes.html
@@ -17,7 +17,7 @@
         <section id="product-details-section" class="dsc-container">
             <div class="dsc-card dsc-mb20">
                 <div class="dsc-product-details-top dsc-line-bottom">
-                    <img src="images/image 3.png" alt="Computador">
+                    <img src="images/computer.png" alt="Computador">
                 </div>
                 <div class="dsc-product-details-bottom">
                     <h3>R$ 5000,00</h3>
