--- a/login.html
+++ b/login.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    <header>
+    <header class="dsc-header-client">
         <nav class="dsc-container">
             <h1>DSCommerce</h1>
-            <a href="#">Entrar</a>
+            <div class="dsc-navbar-right">
+                <div class="dsc-menu-items-container">
+                    <div class="dsc-menu-item">
+                        <img src="images/cart.svg" alt="Carrinho de compras">
+                    </div>
+                </div>
+                <div class="dsc-logged-user">
+                    <a href="#">Entrar</a>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
